# rsomics-rna-fragment-size

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: crafted.bam  crafted.bam.bai  crafted.bed  crafted.txt  genes.bed  golden.txt  reads.bam  reads.bam.bai
